k8s/k8s/catalog-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog-deployment
  labels:
    app: catalog
spec:
  replicas: 3
  selector:
    matchLabels:
      app: catalog
  template:
    metadata:
      labels:
        app: catalog
    spec:
      containers:
        - name: catalog
          image: rvp0110/micro-dev:catalog  # 👈 local image name
          imagePullPolicy: Always           # 👈 force Kubernetes to use local image
          ports:
            - containerPort: 8080
