k8s/k8s/payment-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-service
  template:
    metadata:
      labels:
        app: payment-service
    spec:
      containers:
      - name: payment-service
        image: rvp0110/micro-dev:payment   # 👈 local image name
        imagePullPolicy: Always          # 👈 force Kubernetes to use local image
        ports:
        - containerPort: 8080
